# storageinator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
app/: main.py
app/api/: auth.py  deps.py  directories.py  files.py  permissions.py  public.py  users.py
app/core/: config.py  security.py
app/db/: mongodb.py  s3.py
app/models/: auth.py  directory.py  file.py  permission.py  role.py  user.py
app/services/: auth_service.py  directory_service.py  file_service.py  permission_service.py  user_service.py
frontend/: Dockerfile  nginx.conf
frontend/src/: style.css
frontend/src/api/: client.js
frontend/src/components/: DirectoryTree.vue  FileList.vue  FileUpload.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: FilesView.vue  LoginView.vue  RegisterView.vue  UsersView.vue
